public/widgets/dynamictable/dynamictable-content.css
.widget-dynamictable {
  overflow: visible;
}
.dynamictable-widget {
  height: 100%;
}
.widget-edit-mode .dynamictable {
  cursor: text;
}
.dynamictable {
  border: 1px solid #ccc;
  border-collapse: collapse;
  font-size: 14px;
  width: 100%;
  height: 100%;
  empty-cells: show;
}
.dynamictable th, .dynamictable td {
  position: relative;
}
.dynamictable th {
  border: 1px solid #999;
  margin: 0;
  padding: .5em;
}
.dynamictable td {
  border: 1px solid #999;
  padding: 0.5em;
}
.dynamictable.edited td, .dynamictable.edited th {
  padding: 0;
}
.dynamictable input {
  font-weight: inherit;
  color: inherit;
  background-color: inherit;
  font-size: inherit;
  line-height: inherit;
  width: 100%;
  padding: 0 .5em;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  border: none;
  height: 100%;
  display: block;
}
.dynamictable i {
  position: absolute;
  right: -28px;
}
.dynamictable i:before {
  font-size: 14px;
}
.dynamic-list {
  position: absolute;
  top: 20px;
  left: 0;
  z-index: 100;
  background-color: #eee;
  list-style-type: none;
  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.3);
  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.3);
  padding: 0;
  margin: 0;
  overflow: auto;
  height: 300px;
}
.dynamic-list li {
  cursor: pointer;
  padding: 5px 30px 5px 10px;
  font-weight: normal;
  font-size: 14px;
  white-space: nowrap;
}
.dynamic-list li:hover {
  background-color: #ddd;
}
.mapping {
  margin-top: 10px;
  font-size: 11px;
}

